namespace-kro/gitrepo.yaml
---

apiVersion: v1

kind: Namespace

metadata:

  name: ${swci}-${openvironment}-${suffix}

 

---

apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: allow-${swci}

  namespace: ${swci}-${openvironment}-${suffix}

spec:

  podSelector: {}

  policyTypes:

  - Ingress

  ingress:

  - from:

    - namespaceSelector:

        matchLabels:

          namespace: ${swci}

    # - namespaceSelector:

    #     matchLabels:

    #       kubernetes.io/metadata.name: ingress-nginx # nginx ns label

    - namespaceSelector:

        matchLabels:

          kubernetes.io/metadata.name: aks-istio-ingress # istio ns label

    - namespaceSelector:

        matchLabels:

          kubernetes.azure.com/managedby: aks #  managedby: aks for future ingress i.e app routing

---

apiVersion: security.istio.io/v1beta1

kind: PeerAuthentication

metadata:

  name: voting-mtls-policy

  namespace: ${swci}-${openvironment}-${suffix}

  labels:

    component: mesh

spec:

  mtls:

    mode: STRICT
